format: format code with prettier and eslint
